<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_item_detail_category"

    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="369dp"
                android:layout_height="75dp"

                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"

                android:layout_marginStart="19dp"
                android:layout_marginTop="135dp"
                android:text="@string/fragment_home_title1"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/img_1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/image"
                android:layout_alignParentStart="true"
                android:layout_marginStart="90dp"
                android:layout_marginBottom="-58dp"
                android:text="@string/author_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/image"
                android:layout_alignParentStart="true"
                android:layout_marginStart="86dp"
                android:layout_marginBottom="-86dp"
                android:text="@string/post_on" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="188dp"
                android:src="@drawable/img" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>